# HFTBOT

./: .gitmodules  CMakeLists.txt  build.sh  configure.sh  details.json  readme.md  run.sh
adapters/Bitfinex/: bitfinex-http.cpp  bitfinex-http.hpp
adapters/binance/: binance-http.cpp  binance-http.hpp  binance-ws.cpp  binance-ws.hpp
adapters/coinbase/: coinbase-http.cpp  coinbase-http.hpp  coinbase-ws.cpp  coinbase-ws.hpp
adapters/ftx/: ftx-http.cpp  ftx-http.hpp  ftx-ws.cpp  ftx-ws.hpp
adapters/kraken/: kraken-http.cpp  kraken-http.hpp  kraken-ws.cpp  kraken-ws.hpp
adapters/utils/: utils.cpp  utils.hpp
core/: features.cpp  features.hpp  volatility.hpp
exchanges/: binance-http.cpp  binance-http.hpp  binance-ws.cpp  binance-ws.hpp  coinbase-http.cpp  coinbase-http.hpp  coinbase-ws.cpp  ftx-http.cpp  ftx-http.hpp  ftx-ws.cpp  ftx-ws.hpp  kraken-http.cpp  kraken-http.hpp  kraken-ws.cpp  kraken-ws.hpp  utils.cpp  utils.hpp
features/: TapeSpeedIndicator.hpp
include/: WebsocketClient.hpp  binance-gateway.hpp  binance-http.hpp  binance-ws.hpp  database.hpp  httpClient.hpp  utils.hpp
main/: MarketDataProducer.cpp  MarketDataProducer.hpp  Producer.cpp  Producer.hpp  Ringbuffer.cpp  Ringbuffer.hpp  book_builder.cpp  book_builder.hpp  datafeeds.hpp  main.cpp  notes.md  types.hpp
src/: WebsocketClient.cpp  binance-http.cpp  binance-ws.cpp  boosturl.cpp  database.cpp  httpClient.cpp  httpclient.cpp  main.cpp  utils.cpp
strategies/utils/: TapeSpeedIndicator.cpp
